Rails 02 Viewの構成とBootstrapの課題提出2

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,6 +2,11 @@ h1, h2 {
   font-weight: 100;
 }
 
+.text-white {
+  color: #fff;
+}
+
+
 .btn-white {
   color: #fff;
   border: 1px solid #fff;
@@ -14,4 +19,3 @@ h1, h2 {
     color: #fff;
   }
 }
-
