--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="users-new-wrapper">
   <div class="container">
-    <div class="middle">
+    <div class="row">
       <div class="col-md-offset-4 col-md-4 users-new-container">
         <h1 class="text-center text-white">Sign in</h1>
         <%= form_for @user do |f| %>
@@ -23,7 +23,7 @@
 
           <%= f.submit "登録", class: 'btn-block btn-white' %>
         <% end %>
-        <%= link_to 'ログインはこちら', '#',class: 'text-white' %>
+        <%= link_to 'ログインはこちら', login_path, class: 'text-white' %>
       </div>
     </div>
   </div>
