--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,22 +1,23 @@
-<div class="topic-new-wrapper">
+<div class="topic-new-wrapper" >
   <div class="container">
-    <div class ="row">
+    <div class="row">
       <div class="col-md-6 col-md-offset-3">
-       <h1 class="text-center">Add Picture</h1>
-        <%= form_for @topic do |f| %>
+        <h1 class="text-center">Add Picture</h1>
+       <%= form_for @topic do |f| %>
          <div class="form-group">
-          <%= f.label :image %>
-          <%= f.file_field :image %>
+           <%= f.label :image %>
+           <%= f.file_field :image%>
          </div>
-      
+         
          <div class="form-group">
-          <%= f.label :description %>
-          <%= f.text_area :description, class: 'form-control' %>
+           <%= f.label :description %>
+           <%= f.text_area :description, class: 'form-control' %>
          </div>
-      
-         <%= f.submit '投稿', class: 'btn btn-black btn btn-block' %>
-      
-       <% end %>
+         <%if logged_in?%>
+         <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
+         <% end %>
+         
+        <% end %>
       </div>
     </div>
   </div>
