Rails 07 「いいね」機能の作成の課題

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -109,6 +109,20 @@ h1, h2 {
       width: 100%;
     }
     
+    .like-btn{
+      width: 35px;
+      height: 30px;
+      margin-left: 20px;
+      color: #ffffff;
+    }
+    
+    .unlike-btn {
+      width: 35px;
+      height: 30px;
+      margin-left: 20px;
+      background-color: #ff0303;
+    }
+    
     .topic-index-icon {
       width: 35px;
       height: 30px;
