Rails 07 「いいね」機能の作成の課題

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -120,7 +120,7 @@ h1, h2 {
       width: 35px;
       height: 30px;
       margin-left: 20px;
-      background-color: #ff0303;
+      background-color: #ffffff;
     }
     
     .topic-index-icon {
