--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,30 +2,39 @@
   <div class="container">
     <% @topics.each do |topic| %>
      <div class="row">
-       <div class="col-md-6 com-md-offset-3">
+       <div class="col-md-6 col-md-offset-3">
          <div class="topic-index-single">
            <h2 class="topic-author">
-            <%= topic.user.name %>
+             <%= topic.user.name %>
            </h2>
-           <%= image_tag topic.image.url %>
-               <% if !topic.favorite_users.include?(current_user) %>
-                <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
-                <%= image_tag 'icons/heart-black.png', class: 'like-btn' %>
-           <% end %>
-               <% else %>
-                 <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
-                 <%= image_tag 'icons/heart-black.png', class: 'unlike-btn' %>
-               <% end %>
+             <%= image_tag topic.image.url %>
+           <% if !topic.favorite_users.include?(current_user) %>
+            <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+             <%= image_tag 'icons/heart-black.png', class: 'like-btn' %>
+            <% end %>
+            <% else %>
+             <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
+              <%= image_tag 'icons/heart-red.png', class: 'unlike-btn' %>
+            <% end %>
            <% end %>
            <%= topic.favorite_users.count %>
-           
-           <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
+           <%= link_to comments_new_path(topic_id: topic.id) do %>
+            <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
+           <% end %>
            <p class="topic-text">
-            <%= topic.description %>
+             <%= topic.description %>
            </p>
-          </div>
-        </div>
-      </div>
+           <h4>　コメント</h4>
+           <p class="topic-text">
+                <% topic.comments.each do |comment| %>
+                  <p class="topic-text">
+                  <%= comment.comment %>
+                  </p>
+                <% end %>
+              </p>
+         </div>
+       </div>
+     </div>
     <% end %>
   </div>
 </div>
