--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,14 @@
           <span><%= image_tag "icons/logo.png", class: "navbar-brand" %></span>
         <% end %>
         <ul class="nav navbar-nav navbar-right">
+          
+          
           <% if logged_in? %>
+            <li>
+              <%= link_to profimage_path do %>
+                <%= image_tag "icons/prof_image.png" %>
+              <% end %>
+            </li>
             <li>
               <%= link_to favorites_index_path do %>
                 <%= image_tag "icons/heart.png" %>
