--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -5,12 +5,24 @@
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
             <h2 class="topic-author">
+              <%= image_tag(topic.user.profimage&.image&.url || 'icons/prof_image.png', class: "profile-image") %>
               <%= topic.user.name %>
             </h2>
             <%= image_tag topic.image.url %>
-            <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
-            <p class="topic-text">
-              <%= topic.description %>
+            <%= image_tag 'icons/heart-red.png', class: 'topic-index-icon' %>
+              <%= link_to comments_new_path(topic_id: topic.id) do %>
+                <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
+              <% end %>
+             <p class="topic-text">
+               <%= topic.description %>
+             </p>
+               <h3 class="comment-heading">コメント</h3>
+                <p class="topic-text">
+                  <% topic.comments.each do |comment| %>
+                <p class="topic-text">
+                  <%= comment.comment %>
+                </p>
+                  <% end %>
             </p>
           </div>
         </div>
