--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -5,7 +5,8 @@
        <div class="col-md-6 col-md-offset-3">
          <div class="topic-index-single">
            <h2 class="topic-author">
-             <%= topic.user.name %>
+            <%= image_tag(topic.user.profimage&.image&.url || 'icons/prof_image.png', class: "profile-image") %>
+            <%= topic.user.name %>
            </h2>
              <%= image_tag topic.image.url %>
            <% if !topic.favorite_users.include?(current_user) %>
@@ -24,8 +25,8 @@
            <p class="topic-text">
              <%= topic.description %>
            </p>
-           <h3>　コメント</h3>
-           <p class="topic-text">
+           <h3 class="comment-heading">コメント</h3>
+              <p class="topic-text">
                 <% topic.comments.each do |comment| %>
                   <p class="topic-text">
                   <%= comment.comment %>
